Include the toggle labels inside the toggle if not left aligned fix a class was wpdb instead of wpbd

--- a/assets/css/less/admin-settings.less
+++ b/assets/css/less/admin-settings.less
@@ -286,7 +286,7 @@
 	}
 }
 
-.wpdb-checkbox {
+.wpbd-checkbox {
 	.wpbdp-setting-description {
 		margin: 0 28px;
 	}
