--- a/assets/css/less/admin/settings.less
+++ b/assets/css/less/admin/settings.less
@@ -54,7 +54,7 @@
 	.wpbdp-settings-form-title h2 {
 		font-size: 20px;
 	}
-	.wpdb-checkbox {
+	.wpbd-checkbox {
 		label {
 			font-weight: 500;
 			padding-bottom: 0;
