--- a/assets/css/less/admin/switch.less
+++ b/assets/css/less/admin/switch.less
@@ -1,4 +1,4 @@
-.wpbd-toggle {
+.wpbd-toggle-cont {
 	position: relative;
 	display: inline-block;
 	width: 38px;
@@ -36,7 +36,7 @@
 	bottom: 0;
 	transition: .4s;
 	border-radius: 30px;
-	background-color: fade( @brand, 15% );
+	background-color: fade( @brand, 20% );
 
 	&:before {
 		border-radius: 50%;
@@ -52,6 +52,6 @@
 	}
 }
 
-.wpbdp4 .wpbd-toggle {
+.wpbdp4 .wpbd-toggle-cont {
 	float: right;
 }
